--- a/src/tarea_6/FrmVentanaPrincipal.form
+++ b/src/tarea_6/FrmVentanaPrincipal.form
@@ -319,6 +319,7 @@
           <SubComponents>
             <Component class="javax.swing.JTextArea" name="txabitacora">
               <Properties>
+                <Property name="editable" type="boolean" value="false"/>
                 <Property name="columns" type="int" value="20"/>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Courier New" size="13" style="0"/>
