--- a/src/tarea_6/FrmVentanaPrincipal.form
+++ b/src/tarea_6/FrmVentanaPrincipal.form
@@ -464,7 +464,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="0" green="33" red="66" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Arboles"/>
+            <Property name="text" type="java.lang.String" value="&#xc1;rboles"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
